--- a/rept4/.settings/org.eclipse.wst.common.component
+++ b/rept4/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,7 @@
     <wb-module deploy-name="rept4">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/WebContent/WEB-INF/lib"/>
         <property name="context-root" value="rept4"/>
         <property name="java-output-path" value="/rept4/build/classes"/>
     </wb-module>
